REPLACE in plxUtils::urlify()
		// remove non-alphanumeric character
		$clean_url = trim(preg_replace('@[^\w\.-]+@', '', $clean_url), '-');
BY
		// remove non-alphanumeric character
		$clean_url = trim(preg_replace('@[^\w-]+@', '', $clean_url), '-');

and it's work ;)

## PLUXML 5.9.0 legacy PHP 5.5 (2020.07.30) ##
[+] Imporove defaut theme (5.9.0)
[+] plxShow fixes & improve
   catlist() good home arts number
   catId() to switch retail
   Finish cat 000

   Fix pagination( + $meta=false)
   Fix artNavigation

   Fix canonical() + Hook Plugins #unofficial (sudwebdesign)
   +if(eval($this->plxMotor->plxPlugins->callHook('plxShowCanonical'))) return;

   Fix urlPostsRssFeed()

[+] plxPlugins details
[+] plxUtils::urlify : New param validate & little touchs to solve complete url for static page #legacy
Fix L_ERR_MAXLOGIN admin in 9 langs : % s >>> %s
[+]wip&fixs: plxMotor + index + prepend + add categorie 000
   Fix preChauffageBegin bad url params go to homepage: #thx bazooka07 : https://forum.pluxml.org/discussion/comment/59555/#Comment_59555
   Fix categories.xml absent : les archives ne fonctionnent
   [+] plxMotor __construct : define('PLX_SITE_LANG', $this->aConf['default_lang']);#Moved in index.php & core/admin/prepend.php
   :+: Moved plxMotorConstruct hook after getTemplate (@ end of function)
   Fix Prepend on login (just after auth) : Notice: Undefined index: profil : isset() && == return to homepage! Why? : here is 1st time to add profile

[+] Admin article & cats retail + add cat 000 text + fix regex
[+] Medias.php + medias.js : New sys of breadcrumb with this [Fix breadcrumb of medias #472](https://github.com/pluxml/PluXml/pull/472/commits/7a1efee8a9984dc8556e87bdeffefebaa137cd36) (bazooka07)
[+] Improve Auth Brand Thumbnail (optional logo) : auth.php + admin theme.css : With Parameters > Settings display > Thumbnail (optional) field (sudwebdesign)


## PLUXML 5.9.00 legacy PHP 5.5 (2020.06.06) ##