@@ -557,7 +557,7 @@ a.hint:focus span {
     -webkit-appearance: none;
     /*Removes default style Firefox*/
     -moz-appearance: none;
-    background: url(../images/arrow-down.png) no-repeat;
+    background: url(images/arrow-down.png) no-repeat;
     /*Position of the background-image*/
     background-position: 100% 7px;
     text-indent: 0.01px;
@@ -577,7 +577,7 @@ a.hint:focus span {
 
 .in-action-bar {
     top: 0;
-    margin-top: 4em;
+    margin-top: 5em;/* Fix plugins config save btn */
     position: fixed;
     z-index: 99999;
     width: 100%;
@@ -741,7 +741,7 @@ th.sort.active::after {
 }
 
 .comment {
-    background-image: url('../images/user.png');
+    background-image: url('images/user.png');
     background-repeat: no-repeat;
     margin-bottom: 2rem;
     padding-left: 4rem;
@@ -893,7 +893,7 @@ tr.checked {
 #index-search,
 #medias-search,
 #plugins-search {
-    background: url('../images/search.png') 5px 7px no-repeat;
+    background: url('images/search.png') 5px 7px no-repeat;
     padding-left: 30px;
 }
 
