@@ -26,6 +26,7 @@ BY
 and it's work ;)
 
 ## PLUXML 5.9.0 legacy PHP 5.5 (2020.07.30) ##
+Fix missing image (icons) in admin (css)
 [+] Imporove defaut theme (5.9.0)
 [+] plxShow fixes & improve
    catlist() good home arts number
